// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearProgressBar renders correctly with barStyle 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="bar typePrimaryPositive progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearProgressBar renders correctly with empty props 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  />
</div>
`;

exports[`LinearProgressBar renders correctly with full width progress bar 1`] = `
<div
  className="wrapper small fullWidth"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="bar typePrimaryPrimary progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearProgressBar renders correctly with indicateProgress 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="bar typePrimaryPrimary progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "20%",
        }
      }
    />
  </div>
  <label
    className="label"
    htmlFor="linear-progress-bar"
  >
    20%
  </label>
</div>
`;

exports[`LinearProgressBar renders correctly with min 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={11.11111111111111}
      className="bar typePrimaryPrimary progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "11.11111111111111%",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearProgressBar renders correctly with multi and multiValues 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={100}
      className="bar typePrimaryNone progressBar completed animate"
      data-testid="bar_bar_green_0"
      id="bar_green_0"
      role="progressbar"
      style={
        {
          "backgroundColor": "green",
          "width": "100%",
        }
      }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={75}
      className="bar typePrimaryNone progressBar animate"
      data-testid="bar_bar_yellow_1"
      id="bar_yellow_1"
      role="progressbar"
      style={
        {
          "backgroundColor": "yellow",
          "width": "75%",
        }
      }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={25}
      className="bar typePrimaryNone progressBar animate"
      data-testid="bar_bar_red_2"
      id="bar_red_2"
      role="progressbar"
      style={
        {
          "backgroundColor": "red",
          "width": "25%",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearProgressBar renders correctly with size 1`] = `
<div
  className="wrapper large"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="bar typePrimaryPrimary progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearProgressBar renders correctly with value 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="bar typePrimaryPrimary progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearProgressBar renders correctly with valueSecondary 1`] = `
<div
  className="wrapper small"
  data-testsid="linear-progress-bar"
>
  <div
    className="container"
  >
    <div
      aria-label=""
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={40}
      className="bar typeSecondaryPrimary progressBar animate"
      data-testid="bar-secondary"
      role="progressbar"
      style={
        {
          "width": "40%",
        }
      }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="bar typePrimaryPrimary progressBar animate"
      data-testid="bar-primary"
      role="progressbar"
      style={
        {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;
